--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,7 @@
 {
   "extends": "next/core-web-vitals",
-  "rules": { "react/no-unescaped-entities": 0 }
+  "rules": { 
+    "react/no-unescaped-entities": 0,
+    "@next/next/no-html-link-for-pages": ["error", "packages/my-app/pages/"]
+    }
 }
